--- a/referencias.bib
+++ b/referencias.bib
@@ -2,6 +2,23 @@
 % Encoding: UTF-8
 
 %.bib xxx books google
+@book{mccool2012laravel,
+  title={Laravel Starter},
+  author={McCool, S.},
+  isbn={9781782160915},
+  series={Community experience distilled},
+  year={2012},
+  publisher={Packt Pub.}
+}
+
+@book{stauffer2017desenvolvendo,
+  title={Desenvolvendo com Laravel: Um framework para a constru{\c{c}}{\~a}o de aplicativos PHP modernos},
+  author={Stauffer, M.},
+  isbn={9788575225677},  
+  year={2017},
+  publisher={NOVATEC}
+}
+
 @book{pressman2009engenharia,
   title={Engenharia de Software - 7.ed.},
   author={Pressman, R.S.},
