--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -11,6 +11,7 @@
     \item[CGI] \textit{Common Gateway Interface}
     \item[CLI] \textit{Command Line Interfaces}
     \item[CPF] Cadastro de Pessoa Física
+    \item[CRUD] \textit{Create-Read-Update-Delete}
     \item[FI] \textit{Form Interpreter}
     \item[GB] Gigabyte
     \item[GIS] \textit{Geographic Information System}
@@ -35,7 +36,7 @@
     \item[PHP] \textit{Personal Home Page}
     \item[POP3] \textit{Post Office Protocol}
     \item[POSIX] \textit{Portable Operating System Interface}
-    \item[PSR] PHP \textit{Standard Recommendation}
+    \item[PSR] \textit{PHP Standard Recommendation}
     \item[QR] \textit{Quick Response}
     \item[RDBMS] \textit{Relational Database Management Systems}
     \item[REST] \textit{Representational State Transfer}
