--- a/text-elements/textuais/desenvolvimento/desenvolvimento/controller.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/controller.tex
@@ -1,6 +1,6 @@
 Esse domínio do MVC é responsável por direcionar os \textit{requests} conforme a regra de negócio, também de acordo com a arquitetura do projeto, ele é responsável por autenticar o usuário e garantir que as rotas do sistema estão sendo acessadas por alguém autenticado. 
 
-No caso dos controladores também foi criado um específico para cada classe, onde ele será responsável por direcionar os pedidos conforme a especificidade. Dessa forma, podemos utilizar como exemplo o caso da classe Motoboy, com o controlador representado no \autoref{alg:controllerMotoboy}.
+No caso dos controladores, também foi criado um específico para cada classe, onde ele será responsável por direcionar os pedidos conforme a especificidade. Dessa forma, podemos utilizar como exemplo o caso da classe Motoboy, com o controlador representado no \autoref{alg:controllerMotoboy}.
 
 \begin{lstlisting}[caption={Delivery Routes - Exemplo de um Controller: Motoboy}, style=htmlcssjs, label=alg:controllerMotoboy]
 <?php
