--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -13,6 +13,12 @@ Este Capítulo descreve as ferramentas utilizadas para desenvolvimento do presen
 \section{Laravel}
 \input{text-elements/textuais/desenvolvimento/ferramentas/laravel.tex}
 
+\section{Eloquent}
+\input{text-elements/textuais/desenvolvimento/ferramentas/eloquent.tex}
+
+\section{Artisan}
+\input{text-elements/textuais/desenvolvimento/ferramentas/artisan.tex}
+
 \section{MySQL}
 \input{text-elements/textuais/desenvolvimento/ferramentas/mysql.tex}
 
