--- a/referencias.bib
+++ b/referencias.bib
@@ -5,41 +5,33 @@
 @book{mccool2012laravel,
   title={Laravel Starter},
   author={McCool, S.},
-  isbn={9781782160915},
-  series={Community experience distilled},
   year={2012},
+  %isbn={9781782160915},
+  series={Community experience distilled},
   publisher={Packt Pub.}
 }
 
 @book{stauffer2017desenvolvendo,
   title={Desenvolvendo com Laravel: Um framework para a constru{\c{c}}{\~a}o de aplicativos PHP modernos},
   author={Stauffer, M.},
-  isbn={9788575225677},  
   year={2017},
+  %isbn={9788575225677},
   publisher={NOVATEC}
 }
 
 @book{pressman2009engenharia,
   title={Engenharia de Software - 7.ed.},
   author={Pressman, R.S.},
-  isbn={9788580550443},
   year={2009},
-  publisher={McGraw Hill Brasil}
-}
-
-@book{pressman2009engenharia,
-  title={Engenharia de Software - 7.ed.},
-  author={Pressman, R.S.},
-  isbn={9788580550443},
-  year={2009},
+  %isbn={9788580550443},
   publisher={McGraw Hill Brasil}
 }
 
 @book{bentodesenvolvimento,
   title={Desenvolvimento Web Com Php E Mysql},
   author={Bento, E.J.},
-  isbn={9788566250305},
   year={2014},
+  %isbn={9788566250305},
   publisher={CASA DO CODIGO}
 }
 
@@ -53,10 +45,10 @@
 @book{tulach2008practical,
   title={Practical API Design: Confessions of a Java Framework Architect},
   author={Tulach, J.},
-  isbn={9781430209744},
-  lccn={2009277198},
-  series={Expert's voice in Java technology},
   year={2008},
+  %isbn={9781430209744},
+  %lccn={2009277198},
+  series={Expert's voice in Java technology},
   publisher={Apress}
 }
 
@@ -173,12 +165,12 @@
 @inproceedings{He2015/01,
   title={Design and implementation of web based on laravel framework},
   author={Ren Yu He},
-  year={2015/01},
+  year={2015},
   booktitle={2014 International Conference on Computer Science and Electronic Technology (ICCSET 2014)},
-  issn={2352-538X},
-  isbn={978-94-62520-47-9},
-  url={https://doi.org/10.2991/iccset-14.2015.66},
-  doi={https://doi.org/10.2991/iccset-14.2015.66},
+  %issn={2352-538X},
+  %isbn={978-94-62520-47-9},
+  %url={https://doi.org/10.2991/iccset-14.2015.66},
+  %doi={https://doi.org/10.2991/iccset-14.2015.66},
   publisher={Atlantis Press}
 }
 
