--- a/text-elements/pre-textuais/abstract.tex
+++ b/text-elements/pre-textuais/abstract.tex
@@ -9,7 +9,7 @@
 
 ABSTRACT \\
 
-\textbf{Keywords}: 
+\textbf{Keywords}: Delivery. Geolocation. Google Maps. Web application.
 
 \end{SingleSpacing}
 \end{resumo}
