--- a/referencias.bib
+++ b/referencias.bib
@@ -6,33 +6,32 @@
   title={Laravel Starter},
   author={McCool, S.},
   year={2012},
-  %isbn={9781782160915},
-  series={Community experience distilled},
   publisher={Packt Pub.}
+  %isbn={9781782160915},
 }
 
 @book{stauffer2017desenvolvendo,
   title={Desenvolvendo com Laravel: Um framework para a constru{\c{c}}{\~a}o de aplicativos PHP modernos},
   author={Stauffer, M.},
   year={2017},
-  %isbn={9788575225677},
   publisher={NOVATEC}
+  %isbn={9788575225677},
 }
 
 @book{pressman2009engenharia,
   title={Engenharia de Software - 7.ed.},
   author={Pressman, R.S.},
   year={2009},
-  %isbn={9788580550443},
   publisher={McGraw Hill Brasil}
+  %isbn={9788580550443},
 }
 
 @book{bentodesenvolvimento,
   title={Desenvolvimento Web Com Php E Mysql},
   author={Bento, E.J.},
   year={2014},
-  %isbn={9788566250305},
-  publisher={CASA DO CODIGO}
+  isbn={9788566250305},
+  publisher={CASA DO CÓDIGO}
 }
 
 @book{thomsonphp,
@@ -46,17 +45,8 @@
   title={Practical API Design: Confessions of a Java Framework Architect},
   author={Tulach, J.},
   year={2008},
-  %isbn={9781430209744},
-  %lccn={2009277198},
-  series={Expert's voice in Java technology},
+  isbn={9781430209744},
   publisher={Apress}
-}
-
-@Article{apache:magazine,
-  Title                    = {Configurações básicas no Apache2},
-  Author                   = {Ricardo Franzen},
-  Journal                  = {Revista Infra Magazine},
-  Year                     = {2011},
 }
 
 @Article{apache:webmedia,
@@ -167,11 +157,11 @@
   author={Ren Yu He},
   year={2015},
   booktitle={2014 International Conference on Computer Science and Electronic Technology (ICCSET 2014)},
+  publisher={Atlantis Press}
   %issn={2352-538X},
   %isbn={978-94-62520-47-9},
   %url={https://doi.org/10.2991/iccset-14.2015.66},
   %doi={https://doi.org/10.2991/iccset-14.2015.66},
-  publisher={Atlantis Press}
 }
 
 @Article{comparisonLaravel,
@@ -305,4 +295,11 @@
   Author                  = {Geospatial},
   Year                    = {2009},
 %  Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
+}
+
+@Article{apache:magazine,
+  Title                    = {Configurações básicas no Apache2},
+  Author                   = {Ricardo Franzen},
+  Journal                  = {Revista Infra Magazine},
+  Year                     = {2011},
 }
